fix: image path

--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -150,14 +150,14 @@
     "<div align=\"center\">\n",
     "    <table>\n",
     "        <tr>\n",
-    "            <td align=\"center\"><img src=\"move.png\" alt=\"move.png\" /><br><em>Gambar 2.1 Gestur move.</em></td>\n",
-    "            <td align=\"center\"><img src=\"stop.png\" alt=\"stop.png\" /><br><em>Gambar 2.2 Gestur stop.</em></td>\n",
-    "            <td align=\"center\"><img src=\"lb.png\" alt=\"lb.png\" /><br><em>Gambar 2.3 Gestur klik kiri.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/move.png\" alt=\"move.png\" /><br><em>Gambar 2.1 Gestur move.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/stop.png\" alt=\"stop.png\" /><br><em>Gambar 2.2 Gestur stop.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/lb.png\" alt=\"lb.png\" /><br><em>Gambar 2.3 Gestur klik kiri.</em></td>\n",
     "        </tr>\n",
     "        <tr>\n",
-    "            <td align=\"center\"><img src=\"rb.png\" alt=\"rb.png\" /><br><em>Gambar 2.4 Gestur klik kanan.</em></td>\n",
-    "            <td align=\"center\"><img src=\"double.png\" alt=\"double.png\" /><br><em>Gambar 2.5 Gestur klik kanan ganda.</em></td>\n",
-    "            <td align=\"center\"><img src=\"ss.png\" alt=\"ss.png\" /><br><em>Gambar 2.6 Gestur screenshot.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/rb.png\" alt=\"rb.png\" /><br><em>Gambar 2.4 Gestur klik kanan.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/double.png\" alt=\"double.png\" /><br><em>Gambar 2.5 Gestur klik kanan ganda.</em></td>\n",
+    "            <td align=\"center\"><img src=\"image/ss.png\" alt=\"ss.png\" /><br><em>Gambar 2.6 Gestur screenshot.</em></td>\n",
     "        </tr>\n",
     "    </table>\n",
     "    <p><em>Gambar 2. Gestur tangan.</em></p>\n",
@@ -185,11 +185,11 @@
     "    <table>\n",
     "        <tr>\n",
     "            <td align=\"center\">\n",
-    "                <img src=\"jarak.png\" alt=\"jarak.png\" width=\"250\"><br>\n",
+    "                <img src=\"image/jarak.png\" alt=\"jarak.png\" width=\"250\"><br>\n",
     "                <em>Gambar 3.1 Jarak antara dua titik.</em>\n",
     "            </td>\n",
     "            <td align=\"center\">\n",
-    "                <img src=\"sudut.png\" alt=\"sudut.png\" width=\"250\"><br>\n",
+    "                <img src=\"image/sudut.png\" alt=\"sudut.png\" width=\"250\"><br>\n",
     "                <em>Gambar 3.2 Sudut antara dua garis.</em>\n",
     "            </td>\n",
     "        </tr>\n",
