fix: align tittle

--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -9,10 +9,17 @@
     "\n",
     "# Kontrol Mouse dengan Pelacakan Gerakan Tangan\n",
     "\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
     "**Zufar Syaafi'**  \n",
     "<zufar.syaafie@gmail.com>\n",
     "\n",
     "</div>\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "---\n"
    ]
@@ -641,10 +648,15 @@
     "\n",
     "## Thank You! ^^\n",
     "\n",
+    "</div>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
     "Terima kasih telah membaca hingga akhir \n",
     "Semoga proyek ini bisa menginspirasi dan membantu!\n",
     "\n",
     "</div>\n",
+    "\n",
     "\n",
     "---"
    ]
