--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -5,23 +5,16 @@
    "id": "f66f3f6f",
    "metadata": {},
    "source": [
-    "<div align=\"center\">\n",
+    "<div style=\"text-align: center;\">\n",
     "\n",
     "# Kontrol Mouse dengan Pelacakan Gerakan Tangan\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "<div align=\"center\">\n",
     "\n",
     "**Zufar Syaafi'**  \n",
     "<zufar.syaafie@gmail.com>\n",
     "\n",
     "</div>\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n"
+    "---"
    ]
   },
   {
@@ -644,19 +637,14 @@
    "id": "db8fb2d2",
    "metadata": {},
    "source": [
-    "<div align=\"center\">\n",
+    "<div style=\"text-align: center;\">\n",
     "\n",
     "## Thank You! ^^\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "<div align=\"center\">\n",
     "\n",
     "Terima kasih telah membaca hingga akhir \n",
     "Semoga proyek ini bisa menginspirasi dan membantu!\n",
     "\n",
     "</div>\n",
-    "\n",
     "\n",
     "---"
    ]
