--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -5,14 +5,10 @@
    "id": "f66f3f6f",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: center;\">\n",
-    "\n",
     "# Kontrol Mouse dengan Pelacakan Gerakan Tangan\n",
     "\n",
     "**Zufar Syaafi'**  \n",
     "<zufar.syaafie@gmail.com>\n",
-    "\n",
-    "</div>\n",
     "\n",
     "---"
    ]
@@ -637,14 +633,10 @@
    "id": "db8fb2d2",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: center;\">\n",
-    "\n",
-    "## Thank You! ^^\n",
+    "# Thank You! ^^\n",
     "\n",
     "Terima kasih telah membaca hingga akhir \n",
     "Semoga proyek ini bisa menginspirasi dan membantu!\n",
-    "\n",
-    "</div>\n",
     "\n",
     "---"
    ]
