change: add video

--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -14,8 +14,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1536f2d5",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "    <video width=\"640\" controls>\n",
+    "        <source src=\"image/demo.mp4\" type=\"video/mp4\">\n",
+    "        Your browser does not support the video tag.\n",
+    "    </video>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "23cbb546",
    "metadata": {},
    "outputs": [],
@@ -26,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5faacad3",
    "metadata": {},
    "outputs": [],
@@ -101,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "25f1f1eb",
    "metadata": {},
    "outputs": [],
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6cda00a8",
    "metadata": {},
    "outputs": [],
@@ -277,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "52a5203e",
    "metadata": {},
    "outputs": [],
@@ -322,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "25296284",
    "metadata": {},
    "outputs": [],
@@ -361,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "17636361",
    "metadata": {},
    "outputs": [],
@@ -384,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fd2715cc",
    "metadata": {},
    "outputs": [],
@@ -411,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ab1f5f12",
    "metadata": {},
    "outputs": [],
@@ -438,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bc7400a8",
    "metadata": {},
    "outputs": [],
@@ -467,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "750c809d",
    "metadata": {},
    "outputs": [],
@@ -514,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "9ffaa697",
    "metadata": {},
    "outputs": [],
@@ -574,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8e23f19d",
    "metadata": {},
    "outputs": [],
@@ -619,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0a72e4fd",
    "metadata": {},
    "outputs": [],
