change: add readme

--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "5faacad3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # uncomment the following line to install the required packages\n",
-    "# !pip install cv2 mediapipe pyautogui pynput"
+    "# !pip install opencv-python mediapipe pyautogui pynput"
    ]
   },
   {
