change: using gif

--- a/mouse-tracking.ipynb
+++ b/mouse-tracking.ipynb
@@ -19,10 +19,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "    <video width=\"640\" controls>\n",
-    "        <source src=\"image/demo.mp4\" type=\"video/mp4\">\n",
-    "        Your browser does not support the video tag.\n",
-    "    </video>\n",
+    "    <img src=\"image/Demo.gif\" alt=\"Demo GIF\" width=\"640\" />\n",
     "</div>"
    ]
   },
